<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Q_A">
    <ImageView
        android:id="@+id/image_view_detail"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/mellon" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Branch ID"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_marginStart="16dp"/>
    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="1dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textStyle="italic"
        android:layout_marginStart="16dp"
        android:text="id branch: "
        android:textSize="30sp" />

    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/question"
        android:text="@string/question_declaration"
        android:textSize="19sp"
        android:padding="8dp"/>

        <Button
            android:id="@+id/aristo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_declaration" />
        <Button
            android:id="@+id/ipsilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_declaration1" />
        <Button
            android:id="@+id/metrio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_declaration2" />
        <Button
            android:id="@+id/xamhlo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_declaration3" />


</LinearLayout>

